resized the log in button on the index page to stop horizontal scroll

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -101,7 +101,7 @@ footer i {
 .signingbutton {
     background-color: #F4C542; 
     color: black;
-    width: 300px;
+    width: 260px;
     height: 50px; 
     border: 2px solid black; 
     border-radius: 5px; 
